tests/snapshots/cli_without_frontmatter.snap
---
source: tests/cli_frontmatter_snapshots.rs
expression: "run_cli(input, args)"
---
| A | B |
| 1 | 2 |
