tests/snapshots/collapsed_link_ref_indented_url_inline_title.snap
---
source: tests/wrap/link_ref_snapshots.rs
expression: wrap_lines(input)
---
[foo]:
  https://example.com "My Title"
