tests/snapshots/date_month_day_year_punctuation_wrap.snap
---
source: tests/wrap_unit/dates.rs
expression: "wrap_text(input, width).join(\"\\n\")"
---
The record cites
July 4, 2008, before
the follow-up note.
