tests/snapshots/date_ordinal_day_month_year_wrap.snap
---
source: tests/wrap_unit/dates.rs
expression: "wrap_text(input, width).join(\"\\n\")"
---
Remember 25th December 2025
when wrapping prose near a
boundary.
