tests/snapshots/date_parenthesised_and_footnote_wrap.snap
---
source: tests/wrap_unit/dates.rs
expression: "wrap_text(input, width).join(\"\\n\")"
---
See (July 4, 2008).[^1]
before editing the
release note.
