tests/snapshots/date_wrap_month_day_year_with_comma.snap
---
source: tests/wrap/date_snapshots.rs
expression: "wrap_lines(input, width)"
---
The record cites
July 4, 2008, before
the follow-up note.
