tests/snapshots/date_wrap_numeric_day_month_year.snap
---
source: tests/wrap/date_snapshots.rs
expression: "wrap_lines(input, width)"
---
The archive references
19 March 2018 before
the next paragraph
begins.
