tests/snapshots/date_wrap_over_width_fallback.snap
---
source: tests/wrap/date_snapshots.rs
expression: "wrap_lines(input, width)"
---
25th December 2025.
